# cc-tutorials-2023

docker/: README.md
docker/assignment/: Dockerfile  run.sh
docker/demo-1/: Dockerfile-exec  Dockerfile-shell  main.py
docker/demo-2/: Dockerfile  entrypoint.sh
docker/demo-3/: Dockerfile-client  Dockerfile-server
k8s/: README.md
k8s/deployment/: deployment-template.yml
k8s/hpa/: hpa.yml
k8s/jobs/: cronjob-template.yml  job-template.yml
k8s/persistent_volumes/: pv-pvc.yml
k8s/service/: service.yml
kafka/: .gitignore  README.md
kafka/assignment/: .gitignore  Dockerfile_producer  start-producer.sh
kafka/assignment/cc-assignment-2023/experiment-producer/: Cargo.toml  README.md
kafka/assignment/cc-assignment-2023/experiment-producer/schemas/: experiment_configured.avsc  experiment_started.avsc  experiment_terminated.avsc  sensor_temperature_measured.avsc  stabilization_started.avsc
kafka/assignment/cc-assignment-2023/experiment-producer/src/: events.rs  main.rs  simulator.rs  time.rs
kafka/assignment/cc-assignment-2023/notifications-service/: Cargo.toml  README.md
kafka/assignment/cc-assignment-2023/notifications-service/src/: main.rs
kafka/commit_offsets/: consumer.py  consumer_commit.py  producer.py
kafka/consumer_group/: Dockerfile  consumer.py  producer.py  requirements.txt
kafka/simple_producer_consumer/: consumer.py  producer.py  run.sh
openfaas/: .gitignore  README.md  custom-function.yml  python-db.yml
openfaas/custom-function/: Dockerfile  app.py
openfaas/python-db/: handler.py  (+1 more)
prometheus/: README.md  temp.md
(+11 files in other folders)
