[package]
name = "experiment-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
tokio = { version = "1", features = ["full"]}
clap = { version = "4", features = ["derive", "cargo"]}
apache-avro = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = "1.0.183"
serde_json = "1.0.104"
rand = "0.8.5"

event-hash = { path = "../event-hash" }
