[package]
name = "notifications-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem-openapi = { version = "3", features = ["swagger-ui"]}
poem = { version = "1", features = ["test"] }
tokio = { version = "1", features = ["full"]}
serde = "1.0.183"
serde_json = "1.0.104"
tracing-subscriber = "0.3.17"
tracing = "0.1"
clap = { version = "4", features = ["derive"]}
rand = "0.8.2"
generic-array = "0.14.7"
aes-gcm = "0.10.2"
base64 = "0.21.2"

event-hash = { path = "../event-hash" }
